--- a/index.html
+++ b/index.html
@@ -3,14 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>10 Quiz Challenge</title>
+    <title>CS Quiz Challenge</title>
     <meta name="umar farooq madesh tamizharasu" content="quiz" />
     <meta property="og:type" content="website" />
-
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
